refactor(agentic-ai): introduce custom data abstractions for messages and tool calling (#4793)
* feat(agentic-ai): update langchain4j to 1.0.1

* feat(agentic-ai): use RecordBuilder to generate builders for our immutable models

* feat(agentic-ai): bootstrap dedicated model message/tool calling data structures to map to/from framework-specific ones

* feat(agentic-ai): use manual proxy builders to make jackson deserialization through builders work properly

* feat(agentic-ai): extend message builders for jackson builder deserialization instead of manually creating proxy builders

* refactor(agentic-ai): rename ContentBlock to Content

* refactor(agentic-ai): move new models to a domain package

* refactor(agentic-ai): use new ToolDefinition model in ad-hoc tools-schema response

* refactor(agentic-ai): refactor agentic AI connector codebase to use new abstractions for messages, tool calling, and memory

Decouples langchain4j usage to a framework interface which can
potentially be implemented by another framework.

This allows us to adapt our process variable handling to our needs while
still being able to use framework core functionality for the LLM
communication.

* refactor(agentic-ai): reorganize/rename memory structures

* refactor(agentic-ai): include finish reason as string

* refactor(agentic-ai): add framework native metadata (such as usage) to assistant message

* refactor(agentic-ai): update/clean up data models/records to be unified and make use of generated builders

* test(agentic-ai): update and fix e2e tests after refactoring to new abstractions

* docs(agentic-ai): update chat example to retry on error

* feat(agentic-ai): add configuration for desired response format (full message, text only, both)

* test(agentic-ai): update e2e tests to account for new response handling

* test(agentic-ai): rename agentic AI test to include langchain4j as it specifically tests its interaction with the framework

* refactor(agentic-ai): rename memory concepts to be